# Phan_mem_tu_dong_trade_da_nen_tang_bang_ai

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Kien-truc-Bot-Auto-Trade-AI-v2-Enterprise.md  README.md
.cursor/rules/: 00-agent-safety.mdc  10-git-enterprise.mdc  20-git-savepoint.mdc  (+4 more)
.github/: CODEOWNERS
.specify/: feature.json  init-options.json  integration.json
BE_Bot_Auto_Trade_AI_Tu_hoc/services/ai/: README.md  pyproject.toml
BE_Bot_Auto_Trade_AI_Tu_hoc/services/ai/src/ai_service/: __init__.py  app.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/ai/tests/: test_health.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/backtest/: README.md  pyproject.toml
BE_Bot_Auto_Trade_AI_Tu_hoc/services/backtest/src/backtest_service/: __init__.py  app.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/backtest/tests/: test_health.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/: README.md  pyproject.toml
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/: __init__.py  app.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/adapter/: __init__.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/ledger/: __init__.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/notification/: __init__.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/oms/: __init__.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/risk/: __init__.py  fail_closed.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/src/core_trading/strategy/: __init__.py
BE_Bot_Auto_Trade_AI_Tu_hoc/services/core-trading/tests/: test_fail_closed.py  test_health.py
scripts/: generate-fe-client.md  validate-contracts.ps1  validate-contracts.sh  validate_governance.py
(+274 files in other folders)
